Updated CodingLanguage Model, fixed naming convention issue
Fixed error container div

Added loading spinner before fetching data and added snackbar

restricted user from pressing submit button more than once

Created new relationship between ApplicationUser model and Question model

Moved form control variables into new model class

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -4,16 +4,24 @@
       <h2>Question</h2>
       <h5>Programming</h5>
     </div>
-    <form #codeSnippetForm="ngForm" (ngSubmit)="onSubmit(codeSnippetForm)">
+    <div class="loader-container" *ngIf="!(isCategoryReady && isLanguageReady) || isFormSubmitted">
+      <div class="spinner">
+      </div>
+    </div>
+    <form #codeSnippetForm="ngForm" *ngIf="(isCategoryReady && isLanguageReady)" (ngSubmit)="addCodingQuestion(codeSnippetForm.valid)">
       <div class="form-fields">
         <div class="form-group">
           <label class="h4">Section</label>
           <select class="form-control half-width" id="categorySelect" (change)="selectCategory($event.target.value)" ngModel required name="categorySelect" #categorySelect="ngModel">
-            <option selected></option>
+            <option [disabled]="categorySelect.dirty" selected value="">Please select a category</option>
             <option *ngFor="let category of categoryList">{{category.categoryName}}</option>
           </select>
-          <div *ngIf="categorySelect.errors && (categorySelect.dirty || categorySelect.touched)" class="errors-container">
-            <p class="text-danger">Please select a category</p>
+          <div class="errors-container">
+            <div *ngIf="categorySelect.errors">
+              <div *ngIf="(categorySelect.dirty || categorySelect.touched)">
+                <p class="text-danger">Please select a category</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="form-group">
@@ -24,24 +32,28 @@
             <option>Hard</option>
           </select>
         </div>
+        <div class="errors-container">
+        </div>
         <div class="form-group">
           <label class="h4">Question Details</label>
           <ckeditor placeholder="Question details here" rows="3" [(ngModel)]="questionModel.question.questionDetail" id="detail" name="detail" #detail="ngModel" required></ckeditor>
-          <div class="errors-container" *ngIf="detail.errors && (detail.dirty || detail.touched)">
-            <div [hidden]="!detail.errors.required">
-              <p class="text-danger">Question detail is required</p>
+          <div class="errors-container">
+            <div *ngIf="detail.errors && (detail.dirty || detail.touched)">
+              <div [hidden]="!detail.errors.required">
+                <p class="text-danger">Question detail is required</p>
+              </div>
             </div>
           </div>
         </div>
         <div class="form-group">
           <label class="h4">Code Languages</label>
           <md-chip-list class="form-control half-width" (click)="autocomplete.focus()">
-            <md-chip *ngFor="let selectedLanguage of selectedLanguageList">{{selectedLanguage.languageName}}<i class="material-icons" (click)="removeLanguage(selectedLanguage)">close</i></md-chip>
+            <md-chip *ngFor="let selectedLanguage of selectedLanguageList">{{selectedLanguage}}<i class="material-icons" (click)="removeLanguage(selectedLanguage)">close</i></md-chip>
             <md-input-container>
               <input mdInput placeholder="Code Languages" [mdAutocomplete]="code" #autocomplete ngModel name="languageInput" #languageInput="ngModel">
             </md-input-container>
             <md-autocomplete #code="mdAutocomplete">
-              <md-option *ngFor="let language of codingLanguageList" (click)="selectLanguage(language)" value="{{language.languageName}}">{{language.languageName}}</md-option>
+              <md-option *ngFor="let language of codingLanguageList" (click)="selectLanguage(language)" value="{{language}}">{{language}}</md-option>
             </md-autocomplete>
           </md-chip-list>
           <div class="errors-container">
@@ -61,9 +73,9 @@
         <div class="form-group">
           <label class="h4">Test Case(s)</label>
           <br />
-          <button type="button" class="btn btn-primary" [hidden]="showTestCase" (click)="showTestCase=true">Add Test Case</button>
+          <button type="button" class="btn btn-primary" [hidden]="formControlModel.showTestCase" (click)="formControlModel.showTestCase=true">Add Test Case</button>
           <md2-accordion>
-            <md2-accordion-tab class="collapsible-block" [hidden]="!showTestCase">
+            <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showTestCase">
               <md2-accordion-header class="collapsible-header clearfix">
                 <div class="title-info h2 pull-left">
                   <span>Type: Basic</span>
@@ -115,7 +127,7 @@
                 </div>
               </div>
             </md2-accordion-tab>
-            <md2-accordion-tab class="collapsible-block" [hidden]="!showNewTestCase">
+            <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showNewTestCase">
               <md2-accordion-header class="collapsible-header clearfix">
                 <div class="title-info h2 pull-left">
                   <span>Type: Basic</span>
@@ -168,7 +180,7 @@
               </div>
             </md2-accordion-tab>
           </md2-accordion>
-          <button type="button" class="add-testcase-btn h2" [hidden]="!showTestCase" (click)="showNewTestCase=true">Add New Test Case</button>
+          <button type="button" class="add-testcase-btn h2" [hidden]="!formControlModel.showTestCase" (click)="formControlModel.showNewTestCase=true">Add New Test Case</button>
         </div>
       </div>
       <div class="actions-area">
