--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -23,7 +23,7 @@
             <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required />
             <div class="errors-container">
                 <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
-                <span class='error-msg' [hidden]="!isMessageMismatch">{{messageMismatch}}</span>
+                <span class='error-msg' *ngIf="!isPasswordSame && confirmpassword.touched">Your new password and confirm password do not match</span>
                 <br /><br />
                 <span class='error-msg' [hidden]="!errorCorrection">{{errorMesseage}}</span>
             </div>
