--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -3,34 +3,36 @@
         <h1 class="pull-left" md-dialog-title>Change Password</h1>
         <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
     </div>
-    <md-dialog-content>
-        <div class="form-group">
-            <label class="h4">Current Password</label>
-            <input type="password" class="form-control" [(ngModel)]="user.oldPassword" #oldpassword="ngModel" required />
-            <div class="errors-container">
-                <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched)' [hidden]='!oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
+    <form (ngSubmit)="changePassword(user)" #passwordForm="ngForm">
+        <md-dialog-content>
+            <div class="form-group">
+                <label class="h4">Current Password</label>
+                <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
+                <div class="errors-container">
+                    <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && !oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
+                    <span class='error-msg' *ngIf="errorCorrection">{{errorMesseage}}</span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="h4">New Password</label>
-            <input type="password" class="form-control" [(ngModel)]="user.newPassword" #newpassword="ngModel" required />
-            <div class="errors-container">
-                <span *ngIf='newpassword.errors && (newpassword.dirty || newpassword.touched)' [hidden]='!newpassword.errors.required' class='error-msg'>Please enter new password</span>
+            <div class="form-group">
+                <label class="h4">New Password</label>
+                <input type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" required />
+                <div class="errors-container">
+                    <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.touched && !newpassword.valid' class='error-msg'>Please enter new password</span>
+                    <span *ngIf="newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid" class="error-msg">Password must be alphanumeric with 1 special,1 upper case and with 8 to 14 characters</span>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="h4">Confirm Password</label>
-            <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" #confirmpassword="ngModel" required />
-            <div class="errors-container">
-                <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched)' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
-                <span class='error-msg' *ngIf="!isPasswordSame && confirmpassword.touched">Your new password and confirm password do not match</span>
-                <br /><br />
-                <span class='error-msg' [hidden]="!errorCorrection">{{errorMesseage}}</span>
+            <div class="form-group">
+                <label class="h4">Confirm Password</label>
+                <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
+                <div class="errors-container">
+                    <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched) && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
+                    <span class='error-msg' *ngIf="!isPasswordSame">Your new password and confirm password do not match</span>
+                </div>
             </div>
-        </div>
-    </md-dialog-content>
-    <md-dialog-actions>
-        <button type="button" class="btn" md-dialog-close>Cancel</button>
-        <button type="submit" class="btn btn-primary" (click)="changePassword(user)">Save</button>
-    </md-dialog-actions>
+        </md-dialog-content>
+        <md-dialog-actions>
+            <button type="button" class="btn" md-dialog-close>Cancel</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!passwordForm.form.valid" (click)="changePassword(user)">Save</button>
+        </md-dialog-actions>
+    </form>
 </div>
