--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -3,7 +3,12 @@
     <div class="container">
       <h1 class="pull-left">
         <span [hidden]="editName">{{testsettings.testName}}</span>
-        <input type="text" class="form-control" [(ngModel)]="testsettings.testName" name="Test Name" [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="onBlurMethod(testsettings.id,testsettings)" />
+        <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
+               [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150"
+               [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="testNameUpdation(testsettings.id,testsettings,testsettings.testName)" />
+        <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
+        <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
+        <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.maxlength">Test Name should not exceed 150 characters</span>
         <em class="material-icons" (click)="editName = !editName">edit</em>
       </h1>
       <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
@@ -14,26 +19,34 @@
     <form class="form-area">
       <div class="form-group">
         <label class="h4">Time Duration (mins)</label>
-        <input type="text" class="form-control small-width" [(ngModel)]="testsettings.duration" name="Duration" placeholder="00" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.duration" name="Duration" placeholder="00" max="180" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">Start Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date" />
-        <div class="errors-container"></div>
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date" (mouseup)="validStartDateChecking()" />
+        <div class="errors-container">
+          <span class="error-msg" *ngIf="validStartDate">Start Date must be valid</span>
+        </div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">End Date & Time</label>
-        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" />
-        <div class="errors-container"></div>
+        <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="validEndDateChecking(testsettings.endDate)" />
+        <div class="errors-container">
+          <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
+        </div>
       </div>
       <div class="form-group ip-restrictions-field">
         <label class="h4">IP Restrictions</label>
         <br />
-        <input type="text" class="form-control small-width" placeholder="From IP" [(ngModel)]="testsettings.fromIpAddress" name="From IP Address" />
-        <input type="text" class="form-control small-width" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" name="To Ip Address" />
-        <br />
-        <div class="errors-container"></div>
+        <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testsettings.fromIpAddress" required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+        <div class="errors-container">
+          <span class="error-msg" *ngIf="From.errors && (From.touched || From.pristine || From.untouched)" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
+        </div>
+        <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" #To=ngModel required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+        <div class="errors-container">
+          <span class="error-msg" *ngIf="To.errors && (To.untouched || To.pristine || To.dirty)" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
+        </div>
       </div>
       <div class="form-group">
         <label class="h4">Browser Tolerance</label>
@@ -67,139 +80,41 @@
       </div>
       <div class="form-group inline-field">
         <label class="h4">Correct Marks</label>
-        <input type="text" class="form-control small-width" [(ngModel)]="testsettings.correctMarks" name="Correct Marks" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.correctMarks" name="Correct Marks" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group inline-field">
         <label class="h4">Incorrect Marks</label>
-        <input type="text" class="form-control small-width" [(ngModel)]="testsettings.incorrectMarks" name="Incorrect Marks" />
+        <input type="number" class="form-control small-width" [(ngModel)]="testsettings.incorrectMarks" name="Incorrect Marks" min="0" />
         <div class="errors-container"></div>
       </div>
       <div class="form-group">
         <label class="h4">Warning Message</label>
-        <textarea class="form-control half-width" rows="3" placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message"></textarea>
+        <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
         <div class="errors-container"></div>
       </div>
       <div class="form-group">
         <label class="h4">Warning Time (mins)</label>
-        <input type="text" class="form-control small-width" placeholder="00" [(ngModel)]="testsettings.warningTime" name="Warning Time" />
-        <div class="errors-container"></div>
+        <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testsettings.warningTime" name="Warning Time" min="0" (click)="validWarningTimeChecking()" />
+        <div class="errors-container">
+          <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
+        </div>
+      </div>
+      <div class="footer-block clearfix">
+        <div class="container">
+          <ul class="steps pull-left">
+            <li class="h5"><a [routerLink]="['/tests/sections']">Select Sections</a></li>
+            <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
+            <li class="h5"><a [routerLink]="['/tests/questions']">Select Questions</a></li>
+            <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
+            <li class="h5 active"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
+          </ul>
+          <div class="buttons-block pull-right">
+            <button type="button" class="btn" [routerLink]="['/tests']" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Exit</button>
+            <button type="submit" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" class="btn btn-primary" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Share</button>
+          </div>
+        </div>
       </div>
     </form>
   </div>
-  <div class="footer-block clearfix">
-    <div class="container">
-      <ul class="steps pull-left">
-        <li class="h5"><a [routerLink]="['/tests/sections']">Select Sections</a></li>
-        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-        <li class="h5"><a [routerLink]="['/tests/questions']">Select Questions</a></li>
-        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-        <li class="h5 active"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
-      </ul>
-      <div class="buttons-block pull-right">
-        <button type="button" class="btn" [routerLink]="['/tests']">Save & Exit</button>
-        <button type="button" class="btn btn-primary" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Share</button>
-      </div>
-    </div>
-  </div>
-    <div class="header-block clearfix">
-        <div class="container">
-            <h1 class="pull-left">
-                <span [hidden]="editName">{{testsettings.testName}}</span>
-                <input type="text" id="name" #box (keyup)="testNameLengthChecking(box.value)" name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
-                       [(ngModel)]="testsettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" 
-                       [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="onBlurMethod(testsettings.id,testsettings,box.value)" />
-                <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
-                <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
-                <span class="error-msg" *ngIf="testLength">Test Name should not exceed 150 characters</span>
-                <i class="material-icons" (click)="editName = !editName">edit</i>
-            </h1>
-            <button type="button" class="btn btn-primary pull-right"><i class="material-icons">remove_red_eye</i> Preview</button>
-        </div>
-    </div>
-    <div class="container">
-        <h2>Settings & Schedule</h2>
-        <form class="form-area">
-            <div class="form-group">
-                <label class="h4">Time Duration (mins)</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testsettings.duration" name="Duration" placeholder="00" max="180" min="0"/>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">Start Date & Time</label>
-                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.startDate" name="Start Date"/>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">End Date & Time</label>
-                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testsettings.endDate" name="End Date" (mouseup)="validEndDateChecking(testsettings.endDate)"/>
-                <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
-            </div>
-            <div class="form-group ip-restrictions-field">
-                <label class="h4">IP Restrictions</label>
-                <br />
-                <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testsettings.fromIpAddress"  required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                <span class="error-msg" *ngIf="From.errors && (From.touched || From.pristine || From.untouched)" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
-                <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testsettings.toIpAddress" #To=ngModel  required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"/>
-                <span class="error-msg" *ngIf="To.errors && (To.untouched || To.pristine || To.dirty)" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
-              </div>
-            <div class="form-group">
-                <label class="h4">Browser Tolerance</label>
-                <select class="form-control half-width" [(ngModel)]="testsettings.browserTolerance" name="Browser Tolerance">
-                    <option>0</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="h4">Question Order</label>
-                <select class="form-control half-width">
-                    <option>Random</option>
-                    <option>Option 1</option>
-                    <option>Option 2</option>
-                    <option>Option 3</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label class="h4">Option Order</label>
-                <select class="form-control half-width">
-                    <option>Fixed</option>
-                    <option>Option 1</option>
-                    <option>Option 2</option>
-                    <option>Option 3</option>
-                </select>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">Correct Marks</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testsettings.correctMarks" name="Correct Marks" min="0"/>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">Incorrect Marks</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testsettings.incorrectMarks" name="Incorrect Marks" min="0"/>
-            </div>
-            <div class="form-group">
-                <label class="h4">Warning Message</label>
-                <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testsettings.warningMessage" name="Warning Message"  (keyup)="messageLengthChecking(textarea.value)"></textarea>
-                <span *ngIf="messageLength" class="error-msg">Message cannot be more than 255 characters</span>
-          </div>
-            <div class="form-group">
-                <label class="h4">Warning Time (mins)</label>
-                <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testsettings.warningTime" name="Warning Time" min="0"/>
-            </div>
-            <div class="footer-block clearfix">
-                <div class="container">
-                    <ul class="steps pull-left">
-                        <li class="h5">Select Sections</li>
-                        <li class="h5"><i class="material-icons">keyboard_arrow_right</i></li>
-                        <li class="h5">Select Questions</li>
-                        <li class="h5"><i class="material-icons">keyboard_arrow_right</i></li>
-                        <li class="h5 active">Settings & Schedule</li>
-                    </ul>
-                    <div class="buttons-block pull-right">
-                        <button type="button" class="btn">Save & Exit</button>
-                        <button type="submit" class="btn btn-primary" (click)="launchTestDialog(testsettings.id,testsettings)">Save & Share</button>
-                    </div>
-                </div>
-            </div>
-        </form>         
-    </div>   
 </div>
