--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-multiple-answers/questions-multiple-answers.html
@@ -7,26 +7,24 @@
         <form (ngSubmit)="multipleQuestionAnswerAdd(multipleAnswerQuestion)"  #multipleAnswerQuestionForm="ngForm">
             <div class="form-fields">
                 <div class="form-group">
-                    {{multipleAnswerQuestion.question.questionDetail}}
                     <input type="text" class="form-control" placeholder="Question Test"  [(ngModel)]="multipleAnswerQuestion.question.questionDetail" [ngModelOptions]="{standalone: true}"  id="question" #question="ngModel"  required/>
                     <span *ngIf="question.invalid && question.touched" class="alert-danger">Question field is required</span>
                 </div>
                 <div class="form-group answer-choices" >
-                    <md-checkbox *ngFor="let option of multipleAnswerQuestion.singleMultipleAnswerQuestionAC.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine">
+                    <md-checkbox *ngFor="let option of multipleAnswerQuestion.singleMultipleAnswerQuestion.singleMultipleAnswerQuestionOption;let i = index" [attr.data-index]="i" [(ngModel)]="option.isAnswer" name="first" [disabled]="choice.pristine">
                         <input type="text" class="form-control" placeholder="Write Your Answer" id="choice" #choice="ngModel" [(ngModel)]="option.option" [ngModelOptions]="{standalone: true}" required/>
                         <i class="material-icons" (click)="removeOption(i)" *ngIf="!isClose">close</i><br />
                         <span *ngIf="choice.invalid && choice.touched" class="alert-danger">This field is required</span> 
                     </md-checkbox>
-                    {{isOptionSelected}}
                     <p class="tip">Tip: Click the check boxes to mark the correct answers</p>
                 </div>
                 <div class="form-fields">
                     <div class="form-group col-md-4 col-sm-4 pl0">
-                        <select class="form-control" [(ngModel)]="multipleAnswerQuestion.question.category.categoryName" [ngModelOptions]="{standalone: true}" id="category" #category="ngModel">
+                        <select class="form-control" [(ngModel)]="categoryName" (change)="getCategoryId()" id="category" #category="ngModel" [ngModelOptions]="{standalone: true}">
                             <option [disabled]="category.dirty">Select Category</option>
                             <option *ngFor="let category of categoryArray">{{category.categoryName}}</option>
                         </select>
-                    </div>
+                    </div> 
                     <div class="form-group col-md-2 col-sm-2 pl0">
                         <select name="difficulty" class="form-control" [(ngModel)]="multipleAnswerQuestion.question.difficultyLevel" [ngModelOptions]="{standalone:true}" required #difficulty="ngModel" ng-selected="selected">
                             <option [disabled]="difficulty.dirty" value="0">Select Difficulty</option>
