Method Name Changed Method Comment Changed Removed unused Variables

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/add-category-dialog.html
@@ -6,9 +6,11 @@
     <md-dialog-content>
         <div class="form-group">
             <label class="h4">Section Name</label>
-            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (change)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" placeholder="Ex. General Knowledge" maxlength="150" required />
-            <span *ngIf="isCategoryNameExist" class="error-msg">{{errormesseage}}</span>
-            <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
+            <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (change)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" maxlength="150" placeholder="Ex. General Knowledge" required />
+            <div class="errors-container">
+                <span *ngIf="isCategoryNameExist" class="error-msg">{{errormessage}}</span>
+                <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
+            </div>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
@@ -16,5 +18,3 @@
         <button type="submit" class="btn btn-primary" (click)="addCategory(category)">Create</button>
     </md-dialog-actions>
 </div>
-
-
