--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/rename-category-dialog.html
@@ -7,8 +7,10 @@
         <div class="form-group">
             <label class="h4">Section Name</label>
             <input type="text" class="form-control" id="CategoryName" [(ngModel)]="category.categoryName" (change)="changeErrorMessage()" name="CategoryName" #CategoryName="ngModel" maxlength="150" required />
-            <span *ngIf="isCategoryNameExist" class="error-msg">{{errormessage}}</span>
-            <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span><span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
+            <div class="errors-container">
+                <span *ngIf="isCategoryNameExist" class="error-msg">{{errormessage}}</span>
+                <span *ngIf="CategoryName.errors && (CategoryName.dirty || CategoryName.touched)" [hidden]="!CategoryName.errors.required" class="error-msg">Category Name Required</span>
+            </div>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
