Designed test conduct registration page.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -87,7 +87,7 @@
       </ul>
       <div class="buttons-block pull-right">
         <button type="button" class="btn" [routerLink]="['/tests']">Save & Exit</button>
-        <button type="button" class="btn btn-primary">Save & Share</button>
+        <button type="button" class="btn btn-primary">Save & Next</button>
       </div>
     </div>
   </div>
