changed validation messages for password and email

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -18,7 +18,7 @@
                 <input type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" required />
                 <div class="errors-container">
                     <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.touched && !newpassword.valid' class='error-msg'>Please enter new password</span>
-                    <span *ngIf="newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid" class="error-msg">Password must be alphanumeric with 1 special,1 upper case and with 8 to 14 characters</span>
+                    <span *ngIf="newpassword.errors && newpassword.touched && newpassword.errors.pattern && !newpassword.valid" class="error-msg">Password must be alphanumeric including at least 1 uppercase letter and a special character with 8 to 14 characters</span>
                 </div>
             </div>
             <div class="form-group">
@@ -26,7 +26,7 @@
                 <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
                     <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched) && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
-                    <span class='error-msg' *ngIf="!isPasswordSame">Your new password and confirm password do not match</span>
+                    <span class='error-msg' *ngIf="!isPasswordSame">New password and confirm password do not match</span>
                 </div>
             </div>
         </md-dialog-content>
